--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/final_spring_boot?characterEncoding=UTF-8&createDatabaseIfNotExist=true
-spring.dataSource.username=root
-spring.dataSource.password=12345678abc@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3308/thuy_db?characterEncoding=UTF-8&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
